feat: :sparkles: Implementa modal para certificados y mejora el diseño de las tarjetas de logros.
Se ha añadido un nuevo componente de modal para mostrar detalles de los certificados, incluyendo funciones de zoom y compartir. Además, se han realizado mejoras en el diseño de las tarjetas de logros, asegurando una mejor presentación y usabilidad. Se han agregado estilos específicos para las tarjetas y se han actualizado los componentes relacionados.

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -14,7 +14,7 @@
     "description": "Conexion local entre dos maquinas distintas para el modo multijugador, reconocimiento de teclas, y animaciones.",
     "image": "/totito.png?height=338&width=600",
     "technologies": ["Ensamblador", "VirtualBox"],
-    "demoUrl": "https://www.youtube.com/watch?v=aHiSvfKpPlI",
+    "demoUrl": "",
     "repoUrl": "https://github.com/ejemplo/repo"
   },
   {
